# MARVELsim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  inputfile_marvel.yaml  install.sh  marvelsim.py  pyproject.toml  rv-generator.py  simulator-marvel.py  test.py  test.yaml  test1.yaml  utilities.py
data/: tars-e_num_lst_per_event.npy  tars-e_num_lst_per_step.npy  tars-e_pos0_lst.npy  tars-e_pos1_lst.npy  tars-e_pos2_lst.npy  tars-sec_lst_per_event.npy  tars-ter_lst_per_event.npy  tars-track_length_lst_per_event.npy
docs/: Makefile  README.rst  acknowledgements.html  extra.html  genindex.html  index.html  installation.html  objects.inv  overview.html  performance.html  search.html  searchindex.js  troubleshooting.html  tutorial.html
docs/_build/doctrees/: README.doctree  (+2 more)
docs/doctrees/: acknowledgements.doctree  environment.pickle  extra.doctree  index.doctree  installation.doctree  overview.doctree  performance.doctree  troubleshooting.doctree  tutorial.doctree
docs/html/: .buildinfo  acknowledgements.html  extra.html  genindex.html  index.html  installation.html  objects.inv  overview.html  performance.html  searchindex.js  troubleshooting.html  tutorial.html
docs/source/: acknowledgements.rst  conf.py  extra.rst  index.rst  installation.rst  overview.rst  performance.rst  troubleshooting.rst  tutorial.rst
examples/HPC/: run_calibs.pbs  run_science_pyechelle.pbs  run_science_pyxel.pbs  workflow_calibs.sh  workflow_science.sh
examples/clusterScripts/: run_science_pyxel.pbs
examples/torque/: run_science_pyechelle.pbs
examples/validation_Pyxel/: README.rst  inputfile.yaml  run_pyxel.py
hpc/: README.rst  run_calibs.pbs  run_pyechelle.pbs  run_pyxel.pbs  run_science.pbs  run_science.sh  run_science_pyechelle.pbs  run_science_pyxel.pbs  run_test.pbs  run_test_pyxel.pbs  sshfs-vsc.sh  workflow_calibs.sh
inputfiles/: inputfile_marvel.yaml
marvelsim/: marvelsim.py  rv-generator.py  utilities.py
sims/sim0_2022-02-21/: inputfile_marvel.yaml
test_pyxel/: bias.yaml  exposure-dark.yaml  inputfile.yaml  run_pyxel.py  test.py  test.yaml  test_pyxel100.yaml
test_pyxel/data/: tars-e_num_lst_per_event.npy  tars-e_num_lst_per_step.npy  tars-e_pos0_lst.npy  tars-e_pos1_lst.npy  tars-e_pos2_lst.npy  tars-sec_lst_per_event.npy  tars-ter_lst_per_event.npy  tars-track_length_lst_per_event.npy
validation/: PyxelValidation.ipynb  background.py
(+22 files in other folders)
