[tool.poetry]
name = "MARVELsim"
version = "0.1.0"
description = "Spectrum simulator for the MARVEL project."
authors = ["Nicholas Jannsen <nicholas.jannsen@kuleuven.be>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pyechelle = "^0.3.1"
numpy = "1.20"
numba = ">=0.55.1, <0.55.2"
pyxel-sim = "^1.0.0"
colorama = "^0.4.4"
celerite = "^0.4.2"
pyarrow = "^9.0.0"
docutils = "0.16"
Flask = "^2.2.2"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
renku-sphinx-theme = "^0.2.2"

[tool.poetry.group.rv]
optional = true
[tool.poetry.group.rv.dependencies]
radvel = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
